fix: Resolve critical code quality issues and deprecation warnings
## Major Fixes:
✅ Replace deprecated SecurityManager with AdvancedSecurityManager
✅ Fix unused imports across multiple files (WeatherAgent, A2ABridgeDemo)
✅ Replace deprecated URL(String) constructor with URI.create().toURL()
✅ Create missing TestMetrics class for test framework
✅ Begin EventBroker subscription API fixes (partial)

## Technical Details:
- AgentContext now uses io.amcp.security.AdvancedSecurityManager instead of deprecated java.lang.SecurityManager
- SimpleAgentContext updated to match new security interface
- Removed unused API constants and imports from weather and demo classes
- DuckDuckGoMCPConnector now uses modern URI/URL pattern
- Added comprehensive TestMetrics class with builder pattern
- Started fixing EventBroker.subscribe() calls to use proper EventSubscriber interface

## Impact:
- Eliminates Java 17+ deprecation warnings
- Improves code maintainability and type safety
- Enhances test framework with proper metrics collection
- Maintains backward compatibility while modernizing codebase

## Remaining Work:
- Complete EventBroker subscription fixes in test classes
- Clean up remaining unused variables and methods